--- a/views/story.pug
+++ b/views/story.pug
@@ -2,5 +2,5 @@ extends layout
 
 block content
     h1 My Story
-    p Your Story: #{newstory}
+    p Your Story: #{newStory}
     a(href='/') Try Again
